# search-ja-persona

./: .env.local.example  .gitignore  .gitmodules  AGENTS.md  README.md  hello.py  justfile  load_dataset_example.py  next_person.md  plan.md  pyproject.toml  renovate.json
.claude/: settings.local.json
docs/: architecture.md
docs/adr/: README.md
scripts/: generate_qa_sample.py
search_ja_persona/: __init__.py  application.py  cli.py  datasets.py  embeddings.py  indexer.py  manifest.py  persona_fields.py  repository.py  search.py  services.py  vectorizer.py
tests/: test_application.py  test_cli.py  test_datasets.py  test_embeddings.py  test_generate_qa_sample.py  test_integration_emulators.py  test_manifest.py  test_persona_services.py
