[project]
name = "search-ja-persona"
version = "0.1.0"
description = "Add your description here"
private = false
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.1.1",
    "fastembed>=0.7.3",
    "onnxruntime>=1.16",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "aiohttp>=3.9.5",
    "rich>=14.1.0",
    "sentence-transformers>=5.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.13.2",
]

[tool.pytest.ini_options]
norecursedirs = ["emulator"]
markers = [
    "integration: tests requiring running emulator services and cached datasets",
]

[tool.ruff]
exclude = [
    "emulator/",
]

